test/testzillians-compiler/ThorScriptCompilerStaticTest/error/3_statement/MISSING_BREAK_TARGET.t
function f():void
{
    if(true)
    {
        @static_test { expect_message={ level="LEVEL_ERROR", id="MISSING_BREAK_TARGET" } }
        break;
    }
}
